article and application sections added

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -22,6 +22,7 @@ body {
 
 .profile-container {
 	display: flex;
+	height: 700px;
 }
 .app-profile {
 	width: 50%;
@@ -42,23 +43,22 @@ body {
 .profile-image-container {
 	transition: transform 2s;
 	border-radius: 16px;
-    z-index: 2;
+	z-index: 2;
 }
 
 .app-profile-on-left:hover .profile-image-container {
-	transform: translateX(-400px);
+	transform: translateX(-300px);
 	transition: transform 2s;
 }
 
 .app-profile-on-right:hover .profile-image-container {
-	transform: translateX(400px);
+	transform: translateX(300px);
 }
 
 .profile-image-container img {
-	height: 900px;
+	height: 700px;
 	margin: auto;
 	border-radius: 16px;
-
 }
 
 .profile-info-container {
@@ -66,7 +66,7 @@ body {
 	padding: 50px 10px;
 }
 
-.profile-info-container h2 a {
+.profile-info-container h3 a {
 	text-decoration: none;
 	color: rgb(201, 199, 189);
 }
@@ -78,4 +78,137 @@ body {
 .info-container-left {
 	position: absolute;
 	right: 0;
+}
+
+.showcase-section {
+	width: 100%;
+	margin-top: 30px;
+	box-sizing: border-box;
+}
+
+.showcase-section label {
+	font-size: 36px;
+	margin: 20px 0px 20px 240px;
+	display: block;
+}
+
+.article-showcase {
+	display: flex;
+	flex-direction: row;
+	overflow: auto;
+	width: inherit;
+}
+
+.article-showcase {
+	-ms-overflow-style: none; /* Internet Explorer 10+ */
+	scrollbar-width: none; /* Firefox */
+}
+.article-showcase::-webkit-scrollbar {
+	display: none; /* Safari and Chrome */
+}
+.application-showcase {
+	display: flex;
+	flex-direction: row;
+	overflow: auto;
+	width: calc(100% - 20px);
+	margin: 20px 10px 40px;
+}
+
+.application-showcase {
+	-ms-overflow-style: none; /* Internet Explorer 10+ */
+	scrollbar-width: none; /* Firefox */
+}
+.application-showcase::-webkit-scrollbar {
+	display: none; /* Safari and Chrome */
+}
+
+.application-showcase {
+}
+
+.article-element {
+	margin: 5px 20px;
+	position: relative;
+	width: 480px;
+	height: 300px;
+	overflow: hidden;
+}
+
+.article-element img {
+	width: 480px;
+	height: 300px;
+}
+
+.article-element:hover img {
+	animation-name: zoomOut;
+	animation-duration: 0.5s;
+	animation-fill-mode: forwards;
+}
+
+.application-element {
+	margin: 5px 20px;
+	position: relative;
+	width: 480px;
+	height: 300px;
+	overflow: hidden;
+}
+
+.application-element img {
+	width: 480px;
+	height: 300px;
+}
+
+.application-element:hover img {
+	animation-name: zoomOut;
+	animation-duration: 0.5s;
+	animation-fill-mode: forwards;
+}
+
+.hover-background {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	font-size: 24px;
+	text-align: center;
+	justify-content: center;
+	animation-name: displayNot;
+	animation-duration: 0.5s;
+	animation-fill-mode: forwards;
+	background-color: rgba(0, 0, 0, 0.7);
+}
+@keyframes display {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes displayNot {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+}
+
+@keyframes zoomIn {
+	from {
+		transition: scale(1);
+	}
+	to {
+		transform: scale(1.1);
+	}
+}
+
+@keyframes zoomOut {
+	from {
+		transform: scale(1.1);
+	}
+	to {
+		transition: scale(1);
+	}
 }
